--- a/.gitignore
+++ b/.gitignore
@@ -143,10 +143,6 @@ cython_debug/
 *.png
 
 # Directories
-Services/Electric/SunpowerFiles/
-Services/Electric/PSEGFiles/
-Services/NatGas/NGFiles/
-Services/Simple/SimpleFiles/
-Services/Mortgage/MSFiles/
+Files/
 
 # Specific Files
