--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,7 @@ celerybeat.pid
 
 # Environments
 .env
+.env-test
 .venv
 env/
 venv/
@@ -143,6 +144,6 @@ cython_debug/
 *.png
 
 # Directories
-files/
+data/
 
 # Specific files
